# hypercircuit

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  test_real_implementations.py
.tmp/pytest-of-mini/: pytest-current
configs/: base.yaml  causal.yaml  dictionary.yaml  discovery.yaml  editing.yaml  logging.yaml  matrix.yaml  surrogate.yaml
configs/datasets/: deceptive_reasoning.yaml  jailbreak.yaml  roman_numeral.yaml  sycophancy.yaml  synthetic_parity.yaml  truthfulness_qa.yaml
docs/: CONTRACTS_AND_SCHEMAS.md  NORTH_STAR.md  ROADMAP_V1_to_V2.md  SCALING_RECOMMENDATION.md
examples/: quickstart.md
pytest-of-mini/: pytest-current
pytest-of-mini/pytest-0/: test_discovery_gate1_reportcurrent  test_ensemble_dictionary_buildcurrent  test_real_logging_optionalcurrent  test_registry_and_seedscurrent  test_roundtripcurrent  test_sae_loader_npzcurrent  test_surrogate_cv_and_gate2_recurrent  test_week2_aggregator_multi_recurrent  test_week4_interim_matrix_and_current  test_week5_cli_artifacts_and_dcurrent  test_week6_gate4_end_to_end_rocurrent  test_week7_labels_and_dashboarcurrent  test_week7_logging_24_layer_excurrent  test_week8_release_end_to_endcurrent
scripts/: run_build_dictionary.py  run_causal_eval.py  run_discovery.py  run_edit_eval.py  run_log.py  run_surrogate.py  run_week2_screening.py  run_week4_interim.py  run_week5_safety.py  run_week6_gate4.py  run_week7_labels_dash.py  run_week8_release.py
tests/: test_blt_analysis.py  test_config_schema.py  test_discovery_gate1_report.py  test_ensemble_dictionary.py  test_logging_event_density.py  test_member_granularity.py  test_real_logging_optional.py  test_registry_and_seeds.py  test_sae_loader.py  test_smoke_import.py  test_surrogate_causal_gate2.py  test_week2_synergy_stability.py  test_week4_interim_report.py  test_week5_safety_edits.py  test_week6_gate4_robustness.py  test_week7_labels_dash.py  test_week8_release.py
(+189 files in other folders)
